freeze sso auth service on spring 2.3 (new variant should be created), hystrix service and gateway service and rename resource gateway service

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -13,11 +13,9 @@
 
     <modules>
         <module>eureka-service</module>
-        <module>sso-auth-service</module>
-        <module>gateway-service</module>
-        <module>resource-gateway-service-new</module>
+        <module>resource-gateway-service</module>
         <module>zipkin-dashboard-service</module>
         <module>spring-config-service</module>
-        <module>hystrix-dashboard-service</module>
+<!--        <module>hystrix-dashboard-service</module>-->
     </modules>
 </project>
