migrate to resilience4j

--- a/applications/passport-service/pom.xml
+++ b/applications/passport-service/pom.xml
@@ -32,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>hystrix-component</artifactId>
+            <artifactId>resilience-component</artifactId>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
