--- a/applications/passport-service/src/main/resources/common/application.properties
+++ b/applications/passport-service/src/main/resources/common/application.properties
@@ -3,6 +3,25 @@ server.hostname=localhost
 server.port=8084
 spring.application.name=passport-service
 
+resilience4j.retry.instances.bookmarks.max-retry-attempts=2
+resilience4j.retry.instances.bookmarks.exponential-backoff-multiplier=2
+resilience4j.retry.instances.contacts.max-retry-attempts=2
+resilience4j.retry.instances.contacts.exponential-backoff-multiplier=2
+
+resilience4j.bulkhead.instances.bookmarks.max-concurrent-calls=5
+resilience4j.bulkhead.instances.contacts.max-concurrent-calls=5
+
+resilience4j.circuitbreaker.instances.contacts.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.contacts.permitted-number-of-calls-in-half-open-state=2
+resilience4j.circuitbreaker.instances.contacts.wait-duration-in-open-state=10s
+
+resilience4j.ratelimiter.instances.passport.timeout-duration=1s
+resilience4j.ratelimiter.instances.passport.limit-refresh-period=1m
+resilience4j.ratelimiter.instances.passport.limit-for-period=5
+resilience4j.ratelimiter.instances.async-passport.timeout-duration=1s
+resilience4j.ratelimiter.instances.async-passport.limit-refresh-period=1m
+resilience4j.ratelimiter.instances.async-passport.limit-for-period=5
+
 security.server.user=acme
 security.server.password=acmesecret
 
