--- a/applications/passport-service/src/main/resources/local/application-default.properties
+++ b/applications/passport-service/src/main/resources/local/application-default.properties
@@ -2,6 +2,7 @@
 #client.ssl.enabled=false
 #security.enabled=false
 #eureka.client.enabled=false
+#server.ssl.client-auth=none
 
 #feign.client.bookmark-service.url=localhost:8082
 #feign.client.contact-service.url=localhost:8083
