--- a/parents/dependency-parent/pom.xml
+++ b/parents/dependency-parent/pom.xml
@@ -49,6 +49,14 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <!-- Import dependency management from Resilience4j -->
+                <groupId>io.github.resilience4j</groupId>
+                <artifactId>resilience4j-bom</artifactId>
+                <version>1.5.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!--Spring Cloud-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -56,6 +64,58 @@
                 <version>${spring-cloud-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!--Internal dependencies-->
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.commons</groupId>
+                <artifactId>common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>resource-security-client-component</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>web-security-client-component</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>basic-security-client-component</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>eureka-client-component</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>hystrix-component</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>resilience-component</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>ssl-component</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>swagger-component</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>zipkin-component</artifactId>
+                <version>${project.version}</version>
             </dependency>
 
             <!--Spring Security-->
@@ -92,6 +152,13 @@
                 <groupId>io.zipkin</groupId>
                 <artifactId>zipkin-server</artifactId>
                 <version>${zipkin-server.version}</version>
+            </dependency>
+
+            <!--Resilience-->
+            <dependency>
+                <groupId>io.github.resilience4j</groupId>
+                <artifactId>resilience4j-spring-boot2</artifactId>
+                <version>1.5.0</version>
             </dependency>
 
             <!--jaxb-->
