--- a/services/resource-gateway-service/src/main/resources/common/application.properties
+++ b/services/resource-gateway-service/src/main/resources/common/application.properties
@@ -57,7 +57,7 @@ spring.cloud.gateway.discovery.locator.filters[0].args.replacement='/$1'
 #spring.cloud.gateway.routes[3].predicates[0].args.pattern=/${spring.cloud.gateway.routes[3].id}/**
 #spring.cloud.gateway.routes[3].filters[0].name=RewritePath
 #spring.cloud.gateway.routes[3].filters[0].args.regexp=/${spring.cloud.gateway.routes[3].id}/(.*)
-#spring.cloud.gateway.routes[3].filters[0].args.replacement=$1
+#spring.cloud.gateway.routes[3].filters[0].args.replacement=/$1
 
 
 #TODO:review after finishing gateway full functionality
