--- a/spring2p3/components/pom.xml
+++ b/spring2p3/components/pom.xml
@@ -4,19 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ro.rasel.spring.microservices</groupId>
-        <artifactId>spring-microservices</artifactId>
+        <artifactId>spring-microservices-s2p3</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>ro.rasel.spring.microservices.components</groupId>
-    <artifactId>components</artifactId>
+    <artifactId>components-s2p3</artifactId>
     <packaging>pom</packaging>
 
     <modules>
-        <module>eureka-client-component</module>
-        <module>resilience-component</module>
-        <module>ssl-component</module>
-        <module>security</module>
-        <module>swagger-component</module>
-        <module>zipkin-component</module>
+        <module>hystrix-component-s2p3</module>
     </modules>
 </project>
