--- a/spring2p3/pom.xml
+++ b/spring2p3/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>parents-s2p3</module>
+        <module>components</module>
         <module>services-s2p3</module>
     </modules>
 
