--- a/spring2p3/components-s2p3/pom.xml
+++ b/spring2p3/components-s2p3/pom.xml
@@ -13,5 +13,6 @@
 
     <modules>
         <module>hystrix-component-s2p3</module>
+        <module>swagger2-component-s2p3</module>
     </modules>
 </project>
