--- a/spring2p3/parents-s2p3/service-parent-s2p3/pom.xml
+++ b/spring2p3/parents-s2p3/service-parent-s2p3/pom.xml
@@ -49,7 +49,7 @@
             </dependency>
             <dependency>
                 <groupId>ro.rasel.spring.microservices.components</groupId>
-                <artifactId>swagger-component</artifactId>
+                <artifactId>swagger2-component-s2p3</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
