--- a/spring2p3/services-s2p3/sso-auth-service-s2p3/pom.xml
+++ b/spring2p3/services-s2p3/sso-auth-service-s2p3/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>swagger-component</artifactId>
+            <artifactId>swagger2-component-s2p3</artifactId>
         </dependency>
 
         <!--Spring Boot-->
