migrate components to swagger 3 - wip

--- a/applications/bookmark-service/src/main/resources/local/application-default.properties
+++ b/applications/bookmark-service/src/main/resources/local/application-default.properties
@@ -2,6 +2,7 @@
 #client.ssl.enabled=false
 #security.enabled=false
 #eureka.client.enabled=false
+server.ssl.client-auth=none
 
 spring.jpa.generate-ddl=true
 spring.datasource.url=jdbc:hsqldb:file:./application/bookmark-service/target/db/testdb
