--- a/applications/echo-service/src/main/resources/local/application-default.properties
+++ b/applications/echo-service/src/main/resources/local/application-default.properties
@@ -1,4 +1,4 @@
-#server.ssl.enabled=false
-#client.ssl.enabled=false
-#security.enabled=false
-#eureka.client.enabled=false
+server.ssl.enabled=false
+client.ssl.enabled=false
+security.enabled=false
+eureka.client.enabled=false
