--- a/spring2p3/services-s2p3/sso-auth-service-s2p3/src/main/resources/local/application-default.properties
+++ b/spring2p3/services-s2p3/sso-auth-service-s2p3/src/main/resources/local/application-default.properties
@@ -1,6 +1,7 @@
 #server.ssl.enabled=false
 #client.ssl.enabled=false
 #security.enabled=false
+eureka.client.enabled=false
 
 spring.datasource.url=jdbc:hsqldb:file:./services/sso-auth-service/target/db/testdb
 spring.datasource.username=dbuser
