--- a/parents/dependency-parent/pom.xml
+++ b/parents/dependency-parent/pom.xml
@@ -109,6 +109,11 @@
             </dependency>
             <dependency>
                 <groupId>ro.rasel.spring.microservices.components</groupId>
+                <artifactId>swagger-component</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ro.rasel.spring.microservices.components</groupId>
                 <artifactId>swagger2-component-s2p3</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -133,6 +138,18 @@
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-jwt</artifactId>
                 <version>${spring-security-jwt.version}</version>
+            </dependency>
+
+            <!--Swagger-->
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>1.7.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>2.3.0</version>
             </dependency>
 
             <!--Zipkin-->
@@ -217,7 +234,8 @@
                     <configuration>
                         <versionCheckEnabled>true</versionCheckEnabled>
                         <!--Find latest here: https://nvd.nist.gov/vuln/data-feeds-->
-                        <cveUrlModified>https://nvd.nist.gov/feeds/json/cve/1.1/nvdcve-1.1-modified.json.gz</cveUrlModified>
+                        <cveUrlModified>https://nvd.nist.gov/feeds/json/cve/1.1/nvdcve-1.1-modified.json.gz
+                        </cveUrlModified>
                         <cveUrlBase>https://nvd.nist.gov/feeds/json/cve/1.1/nvdcve-1.1-recent.json.gz</cveUrlBase>
                     </configuration>
                     <executions>
