migrate components to swagger 3 - wip

--- a/commons/spring-common/src/main/resources/application-common.properties
+++ b/commons/spring-common/src/main/resources/application-common.properties
@@ -4,6 +4,9 @@ logging.pattern.level=%5p [${spring.zipkin.service.name:${spring.application.nam
 spring.sleuth.propagation-keys=X-B3-ConversationId
 spring.sleuth.log.slf4j.whitelisted-mdc-keys=X-B3-ConversationId
 
+management.endpoints.web.exposure.include=health, info
+management.endpoint.health.show-details=always
+
 #server.ssl.enabled=false
 #client.ssl.enabled=false
 #security.enabled=false
