--- a/applications/contact-service/src/main/resources/local/application-default.properties
+++ b/applications/contact-service/src/main/resources/local/application-default.properties
@@ -1,7 +1,7 @@
-server.ssl.enabled=false
-client.ssl.enabled=false
-security.enabled=false
-eureka.client.enabled=false
+#server.ssl.enabled=false
+#client.ssl.enabled=false
+#security.enabled=false
+#eureka.client.enabled=false
 
 spring.jpa.generate-ddl=true
 spring.datasource.url=jdbc:hsqldb:file:./application/contact-service/target/db/testdb
@@ -10,3 +10,5 @@ spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 
 spring.jpa.hibernate.ddl-auto=create
+
+server.ssl.client-auth=none
