--- a/applications/echo-service/pom.xml
+++ b/applications/echo-service/pom.xml
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>swagger2-component-s2p3</artifactId>
+            <artifactId>swagger-component</artifactId>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
