migrate components to swagger 3 - wip

--- a/applications/bookmark-service/src/main/resources/common/application.properties
+++ b/applications/bookmark-service/src/main/resources/common/application.properties
@@ -9,5 +9,5 @@ security.server.password=acmesecret
 registry.server.user=eureka
 registry.server.password=eurekasecret
 
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health, info
 management.endpoint.health.show-details=always
