--- a/applications/bookmark-service/src/main/resources/local/application-default.properties
+++ b/applications/bookmark-service/src/main/resources/local/application-default.properties
@@ -11,3 +11,5 @@ spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 
 spring.jpa.hibernate.ddl-auto=create
+
+management.endpoints.web.exposure.include=*
