--- a/services/resource-gateway-service/src/main/resources/common/application.properties
+++ b/services/resource-gateway-service/src/main/resources/common/application.properties
@@ -25,6 +25,11 @@ spring.cloud.gateway.discovery.locator.predicates[0].args.pattern='/'+serviceId+
 spring.cloud.gateway.discovery.locator.filters[0].name=RewritePath
 spring.cloud.gateway.discovery.locator.filters[0].args.regexp='/' + serviceId + '/(?<path>.*)'
 spring.cloud.gateway.discovery.locator.filters[0].args.replacement='/$1'
+spring.cloud.gateway.discovery.locator.filters[1].name=RewriteResponseHeader
+spring.cloud.gateway.discovery.locator.filters[1].args.regexp='/(?<path>.*)'
+spring.cloud.gateway.discovery.locator.filters[1].args.replacement='/' + serviceId + '/$1'
+spring.cloud.gateway.discovery.locator.filters[1].args.name='Location'
+spring.cloud.gateway.discovery.locator.filters[2].name=SwaggerV3
 
 # Variant for manual configuration without service discovery
 #spring.cloud.gateway.routes[0].id=echo-service
@@ -34,6 +39,11 @@ spring.cloud.gateway.discovery.locator.filters[0].args.replacement='/$1'
 #spring.cloud.gateway.routes[0].filters[0].name=RewritePath
 #spring.cloud.gateway.routes[0].filters[0].args.regexp=/${spring.cloud.gateway.routes[0].id}/(.*)
 #spring.cloud.gateway.routes[0].filters[0].args.replacement=/$1
+#spring.cloud.gateway.routes[0].filters[1].name=RewriteResponseHeader
+#spring.cloud.gateway.routes[0].filters[1].args.regexp='/(?<path>.*)'
+#spring.cloud.gateway.routes[0].filters[1].args.replacement='/' + serviceId + '/$1'
+#spring.cloud.gateway.routes[0].filters[1].args.name='Location'
+#spring.cloud.gateway.routes[0].filters[2].name=SwaggerV3
 #
 #spring.cloud.gateway.routes[1].id=bookmark-service
 #spring.cloud.gateway.routes[1].uri=https://localhost:8082
@@ -42,6 +52,11 @@ spring.cloud.gateway.discovery.locator.filters[0].args.replacement='/$1'
 #spring.cloud.gateway.routes[1].filters[0].name=RewritePath
 #spring.cloud.gateway.routes[1].filters[0].args.regexp=/${spring.cloud.gateway.routes[1].id}/(.*)
 #spring.cloud.gateway.routes[1].filters[0].args.replacement=/$1
+#spring.cloud.gateway.routes[1].filters[1].name=RewriteResponseHeader
+#spring.cloud.gateway.routes[1].filters[1].args.regexp='/(?<path>.*)'
+#spring.cloud.gateway.routes[1].filters[1].args.replacement='/' + serviceId + '/$1'
+#spring.cloud.gateway.routes[1].filters[1].args.name='Location'
+#spring.cloud.gateway.routes[1].filters[2].name=SwaggerV3
 #
 #spring.cloud.gateway.routes[2].id=contact-service
 #spring.cloud.gateway.routes[2].uri=https://localhost:8083
@@ -50,6 +65,11 @@ spring.cloud.gateway.discovery.locator.filters[0].args.replacement='/$1'
 #spring.cloud.gateway.routes[2].filters[0].name=RewritePath
 #spring.cloud.gateway.routes[2].filters[0].args.regexp=/${spring.cloud.gateway.routes[2].id}/(.*)
 #spring.cloud.gateway.routes[2].filters[0].args.replacement=/$1
+#spring.cloud.gateway.routes[2].filters[1].name=RewriteResponseHeader
+#spring.cloud.gateway.routes[2].filters[1].args.regexp='/(?<path>.*)'
+#spring.cloud.gateway.routes[2].filters[1].args.replacement='/' + serviceId + '/$1'
+#spring.cloud.gateway.routes[2].filters[1].args.name='Location'
+#spring.cloud.gateway.routes[2].filters[2].name=SwaggerV3
 #
 #spring.cloud.gateway.routes[3].id=passport-service
 #spring.cloud.gateway.routes[3].uri=https://localhost:8084
@@ -58,6 +78,11 @@ spring.cloud.gateway.discovery.locator.filters[0].args.replacement='/$1'
 #spring.cloud.gateway.routes[3].filters[0].name=RewritePath
 #spring.cloud.gateway.routes[3].filters[0].args.regexp=/${spring.cloud.gateway.routes[3].id}/(.*)
 #spring.cloud.gateway.routes[3].filters[0].args.replacement=/$1
+#spring.cloud.gateway.routes[3].filters[1].name=RewriteResponseHeader
+#spring.cloud.gateway.routes[3].filters[1].args.regexp='/(?<path>.*)'
+#spring.cloud.gateway.routes[3].filters[1].args.replacement='/' + serviceId + '/$1'
+#spring.cloud.gateway.routes[3].filters[1].args.name='Location'
+#spring.cloud.gateway.routes[3].filters[2].name=SwaggerV3
 
 
 #TODO:review after finishing gateway full functionality
