--- a/parents/starter-parent/pom.xml
+++ b/parents/starter-parent/pom.xml
@@ -129,43 +129,43 @@
                     <version>${swagger-codegen-maven-plugin.version}</version>
                 </plugin>
 
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>2.3.3.RELEASE</version>
-                    <executions>
-                        <execution>
-                            <id>pre-integration-test</id>
-                            <goals>
-                                <goal>start</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>post-integration-test</id>
-                            <goals>
-                                <goal>stop</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.springdoc</groupId>
-                    <artifactId>springdoc-openapi-maven-plugin</artifactId>
-                    <version>1.4</version>
-                    <executions>
-                        <execution>
-                            <phase>integration-test</phase>
-                            <goals>
-                                <goal>generate</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <!--<apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>-->
-                        <outputFileName>openapi.json</outputFileName>
-                        <outputDir>${project.build.directory}</outputDir>
-                    </configuration>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.springframework.boot</groupId>-->
+<!--                    <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--                    <version>2.3.3.RELEASE</version>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <id>pre-integration-test</id>-->
+<!--                            <goals>-->
+<!--                                <goal>start</goal>-->
+<!--                            </goals>-->
+<!--                        </execution>-->
+<!--                        <execution>-->
+<!--                            <id>post-integration-test</id>-->
+<!--                            <goals>-->
+<!--                                <goal>stop</goal>-->
+<!--                            </goals>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
+<!--                <plugin>-->
+<!--                    <groupId>org.springdoc</groupId>-->
+<!--                    <artifactId>springdoc-openapi-maven-plugin</artifactId>-->
+<!--                    <version>1.4</version>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <phase>integration-test</phase>-->
+<!--                            <goals>-->
+<!--                                <goal>generate</goal>-->
+<!--                            </goals>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                    <configuration>-->
+<!--                        &lt;!&ndash;<apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>&ndash;&gt;-->
+<!--                        <outputFileName>openapi.json</outputFileName>-->
+<!--                        <outputDir>${project.build.directory}</outputDir>-->
+<!--                    </configuration>-->
+<!--                </plugin>-->
 
                 <plugin>
                     <groupId>io.fabric8</groupId>
