--- a/services/resource-gateway-service/pom.xml
+++ b/services/resource-gateway-service/pom.xml
@@ -33,11 +33,19 @@
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>zipkin-component</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel.spring.microservices.components</groupId>
+            <artifactId>swagger-component</artifactId>
+        </dependency>
 
         <!--Spring Boot-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <!--Spring Cloud-->
