--- a/spring2p3/services-s2p3/sso-auth-service-s2p3/src/test/resources/application.properties
+++ b/spring2p3/services-s2p3/sso-auth-service-s2p3/src/test/resources/application.properties
@@ -16,10 +16,12 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=${server.protocol}://${serv
 
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url=jdbc:hsqldb:file:./services/sso-auth-service/target/db/testdb
+spring.datasource.url=jdbc:hsqldb:file:./target/sso-auth-service/db/testdb
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.hibernate.ddl-auto=validate
 
