--- a/spring2p3/components-s2p3/pom.xml
+++ b/spring2p3/components-s2p3/pom.xml
@@ -12,7 +12,10 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>eureka-client-component-s2p3</module>
         <module>hystrix-component-s2p3</module>
+        <module>security-s2p3</module>
         <module>swagger2-component-s2p3</module>
+        <module>zipkin-component-s2p3</module>
     </modules>
 </project>
