--- a/spring2p3/components-s2p3/security-s2p3/basic-security-client-component-s2p3/pom.xml
+++ b/spring2p3/components-s2p3/security-s2p3/basic-security-client-component-s2p3/pom.xml
@@ -7,36 +7,46 @@
         <groupId>ro.rasel.spring.microservices.parents</groupId>
         <artifactId>dependency-parent-s2p3</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../parents-s2p3/dependency-parent-s2p3/pom.xml</relativePath>
+        <relativePath>../../../parents-s2p3/dependency-parent-s2p3/pom.xml</relativePath>
     </parent>
 
     <groupId>ro.rasel.spring.microservices.components</groupId>
-    <artifactId>swagger2-component-s2p3</artifactId>
+    <artifactId>basic-security-client-component-s2p3</artifactId>
     <packaging>jar</packaging>
 
     <description>Security client component for oauth2 authentication/authorisation</description>
 
     <dependencies>
         <dependency>
-            <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>eureka-client-component-s2p3</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>common-security-client-component-s2p3</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <!--Spring Boot-->
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
-        <!--Swagger-->
+        <!--Spring Security-->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
         </dependency>
     </dependencies>
 </project>
