migrate to spring 2.5 - wip

--- a/spring2p3/services-s2p3/pom.xml
+++ b/spring2p3/services-s2p3/pom.xml
@@ -14,6 +14,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>eureka-service-s2p3</module>
         <module>sso-auth-service-s2p3</module>
         <module>resource-gateway-service-s2p3</module>
         <module>gateway-service-s2p3</module>
