--- a/applications/passport-service/pom.xml
+++ b/applications/passport-service/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -141,7 +146,6 @@
                     <generatorName>spring</generatorName>
                     <library>spring-cloud</library>
                     <generateSupportingFiles>false</generateSupportingFiles>
-                    <skipValidationSpec>true</skipValidationSpec>
                     <generateModelTests>false</generateModelTests>
                     <generateApiTests>false</generateApiTests>
                     <configOptions>
