--- a/spring2p3/services-s2p3/eureka-service-s2p3/pom.xml
+++ b/spring2p3/services-s2p3/eureka-service-s2p3/pom.xml
@@ -5,13 +5,13 @@
 
     <parent>
         <groupId>ro.rasel.spring.microservices.parents</groupId>
-        <artifactId>service-parent</artifactId>
+        <artifactId>service-parent-s2p3</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../parents/service-parent/pom.xml</relativePath>
+        <relativePath>../../parents-s2p3/service-parent-s2p3/pom.xml</relativePath>
     </parent>
 
     <groupId>ro.rasel.spring.microservices.services</groupId>
-    <artifactId>eureka-service</artifactId>
+    <artifactId>eureka-service-s2p3</artifactId>
     <packaging>jar</packaging>
 
     <properties>
@@ -22,24 +22,24 @@
     <dependencies>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>resource-security-client-component</artifactId>
+            <artifactId>resource-security-client-component-s2p3</artifactId>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>web-security-client-component</artifactId>
+            <artifactId>web-security-client-component-s2p3</artifactId>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>basic-security-client-component</artifactId>
+            <artifactId>basic-security-client-component-s2p3</artifactId>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>ssl-component</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>ro.rasel.spring.microservices.components</groupId>-->
-<!--            <artifactId>eureka-client-component</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>ro.rasel.spring.microservices.components</groupId>
+            <artifactId>eureka-client-component-s2p3</artifactId>
+        </dependency>
 
         <!--Spring Cloud-->
         <dependency>
