--- a/components/swagger-component/pom.xml
+++ b/components/swagger-component/pom.xml
@@ -23,10 +23,10 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!--Spring Boot-->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springdoc</groupId>-->
+<!--            <artifactId>springdoc-openapi-ui</artifactId>-->
+<!--        </dependency>-->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-autoconfigure</artifactId>-->
